css/base/_globals.css
p {
  font-family: "ff-tisa-web-pro", Georgia, "Times New Roman", Times, serif;
}

a,
a:focus {
  color: #333;
  text-decoration: underline;
}

a:hover {
  color: #7ba6a8;
  -webkit-transition: all .2s linear;
          transition: all .2s linear;
}

.btn[disabled] {
  opacity: 1;
}

.row {
  margin: 0;
}

.triangle {
  position: absolute;
  left: 50%;
  bottom: -33px;
  -webkit-transform: translateX(-50%);
      -ms-transform: translateX(-50%);
          transform: translateX(-50%);
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 33px 42.5px 0 42.5px;
}

.form-control,
.form-control:focus {
  box-shadow: none;
  border: 0;
}

